0.8.0 (currently working on)
- [#2815] Fix: Registration Link is hidden and fully booked string is shown when an event has unlimited vacancies
- [#2803] Change: Hide registration-related fields in the BE seminar editor if the seminar does not need registration
- [#2799] Change: Don't display the red/yellow/green square for events that have started or lie in the past
- [#2813] Change: <label for=""> does not use the values of the id attributes
- [#2804] Feature: Use a different link text for the registration link if the event has no date
- [#2698] Feature: Re-add the checkbox "needs registration"
- [#2474] Change: Use function FrontEndUser::hasGroupMembership
- [#1571] Feature: Add a description to the content wizard
- [#2787] Change: Registration heading should have two markers for title and date
- [#2786] Fix: Subpart REGISTRATION_BOTTOM is not rendered if there's only an error message
- [#2782] Feature: Add lodging model and mapper
- [#2781] Feature: Add food model and mapper
- [#2779] Feature: Add checkbox model and mapper
- [#2778] Feature: Add payment method model and mapper
- [#2777] Feature: Add target group model and mapper
- [#2776] Feature: Add event type model and mapper
- [#2686] Fix: Rename and clean up the e-mail template
- [#2759] Feature: Add place model and mapper
- [#2757] Feature: Add organizer model and mapper
- [#2758] Feature: Add category model and mapper
- [#2755] Fix: CLI user needs the uppercased prefix _CLI_
- [#2752] Feature: Add skill model and mapper
- [#2726] Feature: Use texts from locallang in the CLI user's language for the CLI-sent e-mail
- [#2735] Fix: EventMailForm::sendEmailToAttendees sends duplicate e-mails
- [#2736] Feature: Add a hook for items in the list view, patch by Andre Dittmar
- [#2696] Change: Added a test for ensuring that no mails are sent when attendancesMin is 0
- [#2595] Feature: Add some (very basic) CSS for the e-mails to the attendees